# geheim

./: .gitignore  CMakeLists.txt  README.md  SHA1SUMS
cmd/: build.sh
doc/: README.md  VERSION
doc/html/: geheim.html
doc/man/: geheim.1
include/: geheim.h
src/: CMakeLists.txt  copy_file.c  crypto_nomicon.c  fingerprint.c  main.c  passcode.c  shasums.c
tests/: test_geheim.sh
tests/data/: FillerText.odt  SolarCells.txt
